[package]

name = "unicode-width"
version = "0.1.5"
authors = ["kwantam <kwantam@gmail.com>"]

homepage = "https://github.com/unicode-rs/unicode-width"
repository = "https://github.com/unicode-rs/unicode-width"
documentation = "https://unicode-rs.github.io/unicode-width"
license = "MIT/Apache-2.0"
keywords = ["text", "width", "unicode"]
readme = "README.md"
description = """
Determine displayed width of `char` and `str` types
according to Unicode Standard Annex #11 rules.
"""

exclude = [ "target/*", "Cargo.lock" ]

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-test-workspace-core' }
std = { version = "1.0.0", optional = true, package = 'rustc-test-workspace-std' }

[features]
default = []
no_std = []
bench = []
rustc-dep-of-test = ['core', 'std']
